# teensy-examples

./: .gitignore
PWM Tests ISR/src/: main.cpp  pwm.cpp  pwm.hpp  xbar.hpp
PWM Tests/src/: main.cpp  pwm.cpp  pwm.hpp  xbar.cpp
PWM/src/: main.cpp
adc-cloned/: compile_commands.json  platformio.ini
adc-cloned/src/: main.cpp
adc-simple/: compile_commands.json
adc-simple/src/: main.cpp
adc-timed/: compile_commands.json
adc-timed/src/: adc.cpp  adc.hpp  main.cpp
can/: compile_commands.json  platformio.ini
can/src/: can.h  main.cpp
exti/: .gitignore  compile_commands.json
exti-abstraction/src/: ExtiAbstraction.cpp
exti/sim/: .gitignore  Arduino.h  CMakeLists.txt  accelerometer.cpp  accelerometer.hpp  compile_commands.json  ekf.cpp  ekf.hpp  linear_encoder.cpp  linear_encoder.h  main.cpp  metrics.h  plot.py  result.csv  simulate.sh  state_estimation.cpp  state_estimation.h  timestamp.h
exti/sim/metrics/: distance.h  duration.h  metrics.h  timestamp.h
exti/src/: linear_encoder.cpp  linear_encoder.h  main.cpp
exti/src/metrics/: current.h  distance.h  metrics.h  resistance.h  timestamp.h  voltage.h  (+1 more)
linear-encoder/: .gitignore
linear-encoder/src/: main.cpp
mass-flow-rate/: platformio.ini
mass-flow-rate/src/: example1.cpp  example2.cpp  main.cpp
moving-average/: .gitignore  CMakeLists.txt  platformio.ini
moving-average/.cache/clangd/index/: MovingAvg.h.519860512F832A25.idx  main.cpp.5B208A20762C90E0.idx
moving-average/src/: MovingAvg.h  main  main.cpp
spi-accelerometer/: compile_commands.json
spi-accelerometer/src/: main.cpp  main2.cpp
(+9 files in other folders)
